--- a/source/assets/stylesheets/pages/_index.scss
+++ b/source/assets/stylesheets/pages/_index.scss
@@ -2,7 +2,11 @@ section.introduction {
   background: $white;
 
   h1 {
-    font-size: $base-font-size * 3.2;
+    font-size: $base-font-size * 2;
+
+    @include grid-media($for-desktop-up) {
+      font-size: $base-font-size * 3.2;
+    }
   }
 
   .grid-row {
